2004-07-19  Pawel Salek

	* libbalsa/body.[hc]: rename libbalsa_message_body_get_content_type()
	to libbalsa_message_body_get_mime_type() to match the implementation.
	* src, libbalsa: associated changes.
	* libbalsa/mailbox_imap.c: handle imap servers without server-side
	threading.
	* src/information-dialog.c: loose no info messages.
	* src/main.c: shutdown nicely imap connections.

2004-07-18  Pawel Salek

	* libbalsa/body.[hc]: rename ::mime_type to ::content_type
	and store complete content-type header value there.
	* libbalsa/{mailbox_imap,rfc3156,send}.c: associated changes.
	* libbalsa/imap-server.c: lift the number of connections per
	server to 40.
	* libbalsa/imap/imap-handle.[ch]:
	implement imap_body_get_content_type()
	* src/balsa-message.c: again, mime_type->content_type. 
	Failed sig verification messages are made just infos.
	* src/save-restore.c: show information messages in the status bar.
	* src/sendmsg-window.c: mime_type->content_type.

2004-07-16 23:03  PeterB

	* src/balsa-message.c: plug leaks.
	* src/: mailbox-node.c, mailbox-node.h: check more carefully for
	pre-existing imap folder; use BALSA_MAILBOX_NODE_NEW_MAILBOX
	GObject data to mark an mbnode with a newly attached mailbox.
	* src/balsa-mblist.c: connect to the mailbox's "changed" signal in
	bmbl_store_redraw_mbnode instead of in
	balsa_mblist_mailbox_node_append; use
	BALSA_MAILBOX_NODE_NEW_MAILBOX GObject data on mbnode to decide
	when we need to connect.
	* libbalsa/mailbox_local.c: free threading info on closing.

2004-07-15  Pawel Salek

	* balsa.spec.in: fix dependencies.
	* libbalsa/imap/imap-commands.c: property type casts.
	* src/balsa-message.c: ditto. All of it pointed by John Dennis.

2004-07-14 23:43  PeterB

	* src/main-window.c: store view filter mask before setting the view
	filter.
	* src/balsa-index.c: block selection "changed" signal handler while
	we change the list of selected messages.
	* src/save-restore.c: save all mailbox-views in the hash table, not